@@ -1,5 +1,10 @@
 1999-11-12  Havoc Pennington  <hp@pobox.com>
 
+	* backends/xml-backend.c: Change all comments starting with /** to
+	not start with that (for gtkdoc)
+
+1999-11-12  Havoc Pennington  <hp@pobox.com>
+
 	* gconf/gconftool.c (main): Add the ability to specify a
 	configuration source other than the default configuration source
 	stack.
